APB-141 height consistency menu 4 content, charts using div for titles, clearing canvas with outerHMTL, app select shows names, bugfix filter apps and sum days for chart 2, box 2 with 2 color usage, login dialogue replace login title with, bugfix icon in error message, filter ADMIN SQL only in SERVER LOG, spinner renamed and list_scrollbar overrides transform css, chart 1 with app name and without app 0

--- a/apps/app2/css/app.css
+++ b/apps/app2/css/app.css
@@ -230,7 +230,7 @@
 	font-size: 48px;
 }
 
-#dialogue_loading #button_spinner{
+#dialogue_loading #app_spinner{
 	top: 50%;
 }
 
